--- a/crates/swbusd/Cargo.toml
+++ b/crates/swbusd/Cargo.toml
@@ -17,6 +17,8 @@ tokio.workspace = true
 tokio-stream.workspace = true
 tonic.workspace = true
 swbus-core.workspace = true
+sonic-common.workspace = true
+tracing.workspace = true
 clap = { version = "4.0", features = ["derive"] }
 
 [lints]
